<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="@+id/img_photo"
            tools:text="Username" />

        <TextView
            android:id="@+id/tv_title_repo"
            style="@style/TextTitle"
            android:layout_marginStart="8dp"
            android:text="@string/repo"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_repo"
            style="@style/TextData"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_repo"
            app:layout_constraintStart_toStartOf="@+id/tv_title_repo"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_repo"
            tools:text="30" />

        <TextView
            android:id="@+id/tv_title_followers"
            style="@style/TextTitle"
            android:layout_marginStart="16dp"
            android:text="@string/followers"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_repo"
            app:layout_constraintStart_toEndOf="@+id/tv_title_repo"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/TextData"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_title_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_followers"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_title_following"
            style="@style/TextTitle"
            android:layout_marginStart="16dp"
            android:text="@string/following"
            app:layout_constraintStart_toEndOf="@+id/tv_title_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/TextData"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_following"
            app:layout_constraintStart_toStartOf="@+id/tv_title_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_following"
            tools:text="200" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextData"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="@+id/tv_followers"
            app:layout_constraintStart_toStartOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_photo"
            tools:text="Name" />

        <TextView
            android:id="@+id/tv_url"
            style="@style/TextData"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="html url" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/TextDataIcon"
            app:drawableStartCompat="@drawable/ic_baseline_work_24"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_url"
            tools:text="Company" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextDataIcon"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="@+id/tv_company"
            app:layout_constraintStart_toStartOf="@+id/tv_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_company"
            tools:text="Location" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            app:tabTextColor="@color/black" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ToggleButton
            android:id="@+id/btn_fav"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:layout_constraintVertical_bias="0.542" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_fav"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>